Refactor `OrderService` to improve caching logic and add missing order handling